--- a/TwinLand/TwinLand.csproj
+++ b/TwinLand/TwinLand.csproj
@@ -9,11 +9,12 @@
         <GenerateResourceUsePreserializedResources>true</GenerateResourceUsePreserializedResources>
         <NuGetPackageImportStamp>
         </NuGetPackageImportStamp>
+		<AppendTargetFrameworkToOutputPath>false</AppendTargetFrameworkToOutputPath>
     </PropertyGroup>
 
     <PropertyGroup Condition=" '$(Configuration)' == 'Debug' ">
       <PlatformTarget>AnyCPU</PlatformTarget>
-      <OutputPath>D:\Application Development\grasshopper development\TwinLand\bin\Test</OutputPath>
+      <OutputPath>D:\Application Development\grasshopper development\TwinLand_win\bin\Debug</OutputPath>
       <DebugType>full</DebugType>
       <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
     </PropertyGroup>
@@ -26,16 +27,16 @@
     </PropertyGroup>
 
     <ItemGroup>
-        <PackageReference Include="GDAL" Version="2.4.4" />
-        <PackageReference Include="GDAL.Native" Version="2.4.4" />
-        <PackageReference Include="GDAL.Plugins" Version="2.4.4" />
+        <PackageReference Include="GDAL" Version="3.7.1" />
+        <PackageReference Include="GDAL.Native" Version="3.7.1" />
+        <PackageReference Include="GDAL.Plugins" Version="3.7.1" />
         <PackageReference Include="Grasshopper" Version="7.32.23215.19001" />
         <PackageReference Include="Microsoft.NETCore.Runtime" Version="1.0.2-rc2-24027" />
         <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
         <PackageReference Include="OsmSharp" Version="7.0.0-pre022" />
         <PackageReference Include="RhinoCommon" Version="7.32.23215.19001" />
-        <PackageReference Include="System.Drawing.Common" Version="8.0.0-preview.7.23375.5" />
-        <PackageReference Include="System.Resources.Extensions" Version="8.0.0-preview.7.23375.6" />
+        <PackageReference Include="System.Drawing.Common" Version="8.0.0-rc.1.23419.5" />
+        <PackageReference Include="System.Resources.Extensions" Version="8.0.0-rc.1.23419.4" />
         <PackageReference Include="System.ValueTuple" Version="4.5.0" />
         <PackageReference Include="Unofficial.laszip.net" Version="2.2.0" />
     </ItemGroup>
@@ -70,7 +71,7 @@
 
     <ItemGroup>
       <Reference Include="FlexCLI">
-        <HintPath>..\dll\FlexCLI.dll</HintPath>
+        <HintPath>..\bin\Debug\FlexCLI.dll</HintPath>
       </Reference>
       <Reference Include="gdalconst_csharp">
         <HintPath>..\..\..\..\..\..nuget\packages\gdal\2.4.4\lib\net40\gdalconst_csharp.dll</HintPath>
